@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 2.1-41 (opened December 12, 2013)
 
+	* adipart, multipart, hiersimu: it is now an error to provide 
+	non-nested sampling hierarchy (used to be a warning).
+
 	* new version opened with the CRAN release of vegan_2.0-10 on
 	December 12, 2013.
 
